my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EFUNARRAY/EFUNARRAY.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EFUNARRAY.dml:9:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EFUNARRAY.dml:11:5: error EFUNARRAY: illegal type: array of functions
